agregando modal de confirmacion: aun no funciona

--- a/frontend/src/app/auth/login/login.html
+++ b/frontend/src/app/auth/login/login.html
@@ -67,6 +67,6 @@
             }
         </button>
 
-        <p class="register-link">No tenes cuenta? <a routerLink="/registro">Registrate acá</a></p>
+        <p class="register-link">No tenes cuenta? <a routerLink="/register">Registrate acá</a></p>
     </form>
 </div>
