--- a/frontend/src/app/auth/login/login.html
+++ b/frontend/src/app/auth/login/login.html
@@ -5,7 +5,7 @@
             alt="Mascota NoliChismes" 
             class="mascota-img">
     </div>
-    <h2>Inicia sesion para ver los chismecitos 👀</h2>
+    <h2>Inicia sesion para ver los chismecitos </h2>
 
     @if (errorMessage) {
         <div class="alert alert-danger">
@@ -34,7 +34,6 @@
                 </div>
             }
         </div>
-
         <div class="form-group">
             <label for="password">Contraseña</label>
             <input 
@@ -55,7 +54,6 @@
                 </div>
             }
         </div>
-
         <button
             type="submit" 
             [disabled]="loginForm.invalid || isLoading" 
