Arreglo de directivas

--- a/frontend/src/app/auth/login/login.html
+++ b/frontend/src/app/auth/login/login.html
@@ -1,7 +1,7 @@
 <div class="login-container">
     <div class="mascota-welcome">
         <img 
-            src="imagenes/mascota-bienvenida.png" 
+            src="imagenes/Noli-Happy.jpg" 
             alt="Mascota NoliChismes" 
             class="mascota-img">
     </div>
