--- a/frontend/src/app/features/publicaciones/publicacion-card/publicacion-card.html
+++ b/frontend/src/app/features/publicaciones/publicacion-card/publicacion-card.html
@@ -5,7 +5,7 @@
         [src]="fullAvatarUrl" 
         alt="Avatar" 
         class="avatar"
-        appImagenDefault>
+        appImgDefault>
       <div class="user-details">
         <span class="username">{{ publicacion.usuarioId.nombreUsuario || 'Usuario' }}</span>
         <span class="fecha">{{ publicacion.fechaCreacion | tiempoTranscurrido }}</span>
