nueva imagen en modal y casi deployado

--- a/frontend/src/app/shared/confirm-modal/confirm-modal.html
+++ b/frontend/src/app/shared/confirm-modal/confirm-modal.html
@@ -6,6 +6,12 @@
     </div>
     
     <div class="modal-body">
+      <div class="modal-mascota-container">
+        <img 
+          src="imagenes/Noli-pensando.png" 
+          alt="Mascota pensando" 
+          class="modal-mascota">
+      </div>
       <p style="font-size: 1.1rem; text-align: center;">{{ message }}</p>
     </div>
 
