--- a/frontend/src/app/features/publicaciones/publicacion-card/publicacion-card.html
+++ b/frontend/src/app/features/publicaciones/publicacion-card/publicacion-card.html
@@ -41,7 +41,7 @@
     </app-comentarios-section>
   }
 
-  <div class="card-comments">
+  <!-- <div class="card-comments">
     @if (publicacion.comentarios && publicacion.comentarios.length > 0) {
       <div class="comment">
       </div>
@@ -49,5 +49,5 @@
         <a class="view-all-comments">Ver los {{ publicacion.comentarios.length }} comentarios</a>
       }
     }
-  </div>
+  </div> -->
 </div>
